--- a/style.css
+++ b/style.css
@@ -7,10 +7,13 @@
   }
 
   .menu-header {
-    font-weight: bold;
-    border-bottom: 2px solid #f0c75e;
-    margin-bottom: 5px;
-  }
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  padding: 8px 12px;
+  border-bottom: 2px solid #ccc;
+  font-size: 16px;
+}
    .qty-cart-box {
   text-align: center;
   margin-bottom: 1rem;
