--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
     align-items: center;
   }
 
-  .menu-header {
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-  padding: 8px 12px;
-  border-bottom: 2px solid #ccc;
-  font-size: 16px;
-}
+   .menu-header {
+     display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+    border-bottom: 2px solid #f0c75e;
+    margin-bottom: 5px;
+  }
    .qty-cart-box {
   text-align: center;
   margin-bottom: 1rem;
